bee-common/bee-common-derive/tests/packable/fail/no_ty_enum.stderr
error: Enums that derive `Packable` require a `#[packable(tag_ty = ...)]` attribute.
  --> $DIR/no_ty_enum.rs:13:10
   |
13 | pub enum OptI32 {
   |          ^^^^^^
